Functional End Commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/testconverter
+spring.datasource.url=jdbc:postgresql://localhost:5432/convertertest
 spring.datasource.username=postgres
 spring.datasource.password=post123
 spring.jpa.generate-ddl=true
